--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "portfolio",
+  "description": "Web developer portfolio for Joe Avila.",
   "version": "1.0.0",
-  "author": "Hunter Chang",
+  "author": "Joe Avila",
   "dependencies": {
     "gatsby": "^2.20.12",
+    "gatsby-cli": "^2.12.54",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-react-helmet": "^3.2.1",
@@ -16,7 +17,9 @@
     "react-images": "^1.0.0"
   },
   "keywords": [
-    "gatsby"
+    "portfolio",
+    "web developer",
+    "web dev"
   ],
   "license": "MIT",
   "scripts": {
@@ -27,9 +30,5 @@
   },
   "devDependencies": {
     "prettier": "^2.0.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
   }
 }
