--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
-    "react-images": "^1.0.0"
+    "react-helmet": "^5.2.1"
   },
   "keywords": [
     "portfolio",
