--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Joe Avila",
   "dependencies": {
+    "g-sheets-api": "^1.3.0",
     "gatsby": "^2.20.12",
     "gatsby-cli": "^2.12.58",
     "gatsby-plugin-manifest": "^2.3.3",
@@ -13,7 +14,8 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-wordcloud": "^1.2.3"
   },
   "keywords": [
     "portfolio",
