--- a/package.json
+++ b/package.json
@@ -10,20 +10,13 @@
     "gatsby-plugin-catch-links": "^2.3.15",
     "gatsby-plugin-emotion": "^4.3.14",
     "gatsby-plugin-manifest": "^2.3.3",
-    "gatsby-plugin-mdx": "^1.2.52",
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.43",
-    "gatsby-plugin-typography": "^2.5.13",
-    "gatsby-remark-images": "^3.3.40",
     "gatsby-source-filesystem": "^2.3.37",
-    "gatsby-transformer-sharp": "^2.5.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
-    "react-wordcloud": "^1.2.3",
-    "typography": "^0.16.19"
+    "react-wordcloud": "^1.2.3"
   },
   "keywords": [
     "portfolio",
