--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "g-sheets-api": "^1.3.0",
     "gatsby": "^2.20.12",
     "gatsby-cli": "^2.12.107",
+    "gatsby-image": "^2.4.21",
     "gatsby-plugin-catch-links": "^2.3.15",
     "gatsby-plugin-emotion": "^4.3.14",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-source-filesystem": "^2.3.37",
+    "gatsby-plugin-sharp": "^2.7.1",
+    "gatsby-source-filesystem": "^2.4.1",
+    "gatsby-transformer-remark": "^2.9.2",
+    "gatsby-transformer-sharp": "^2.5.21",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
