--- a/package.json
+++ b/package.json
@@ -3,22 +3,7 @@
   "description": "Web developer portfolio for Joe Avila.",
   "version": "1.0.0",
   "author": "Joe Avila",
-  "dependencies": {
-    "g-sheets-api": "^1.3.0",
-    "gatsby": "^2.20.12",
-    "gatsby-cli": "^2.12.107",
-    "gatsby-plugin-manifest": "^2.3.3",
-    "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sass": "^2.2.1",
-    "gatsby-source-filesystem": "^2.6.1",
-    "gatsby-transformer-remark": "^2.11.1",
-    "node-sass": "^4.13.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
-    "react-wordcloud": "^1.2.3"
-  },
+  "dependencies": {},
   "keywords": [
     "portfolio",
     "web developer",
@@ -30,8 +15,5 @@
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "prettier": "^2.0.2"
   }
 }
