--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
-  "name": "portfolio",
-  "description": "Web developer portfolio for Joe Avila.",
-  "version": "1.0.0",
-  "author": "Joe Avila",
-  "dependencies": {},
-  "keywords": [
-    "portfolio",
-    "web developer",
-    "web dev"
-  ],
-  "license": "MIT",
+  "name": "new",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1"
+  },
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
