--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Joe Avila",
   "devDependencies": {
     "css-loader": "^5.0.2",
+    "dotenv-webpack": "^6.0.2",
     "html-webpack-plugin": "^5.2.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.24.1",
