--- a/package.json
+++ b/package.json
@@ -3,16 +3,6 @@
   "description": "Web developer portfolio for Joe Avila.",
   "version": "1.0.0",
   "author": "Joe Avila",
-  "devDependencies": {
-    "copy-webpack-plugin": "^8.1.1",
-    "css-loader": "^5.0.2",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.2.0",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.24.1",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
-  },
   "keywords": [
     "portfolio",
     "web developer",
@@ -20,7 +10,14 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack serve --open"
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "start": "npm run develop"
+  },
+  "dependencies": {
+    "gatsby": "^3.4.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "typescript": "^4.2.4"
   }
 }
