--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^3.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "typescript": "^4.2.4"
   }
 }
